# tlon

./: .gitignore  CLAUDE.md  PLAN.md  README.md  WEB.md  flake.nix  justfile  package-lock.json  package.json  tlon.cabal
app/: Main.hs  WebMain.hs
client/: agentation-entry.jsx
scripts/: agentation-proxy.mjs  build-agentation.sh  run-web-watch.sh  run-web.sh
src/: Tlon.hs
src/Tlon/Core/: Engine.hs  Event.hs  OrderBook.hs  Rng.hs  Rules.hs  State.hs  Types.hs
src/Tlon/Game/Default/: Config.hs  Rules.hs  Scenario.hs  Setup.hs  View.hs
src/Tlon/Web/: Api.hs  Server.hs  State.hs  View.hs
static/: agentation.bundle.js
test/: Spec.hs
